# arrowspace-mcp

./: .gitignore  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml
src/arrowspace_mcp/: __init__.py  __main__.py  config.py  file_loader.py  registry.py  server.py  zzarr_loader.py
src/arrowspace_mcp/skills/: HYPERPARAMETERS.md  arrowspace-core.md  arrowspace-search.md  arrowspace-spectral.md
tests/: test_smoke.py
