[project]
name = "arrowspace-mcp"
version = "0.1.0"
description = "MCP server for ArrowSpace spectral vector search"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Genefold AI Ltd", email = "coderbot@genefold.ai" },
]
dependencies = [
    "arrowspace>=0.24",
    "mcp>=1.0",
    "numpy",
    "uvicorn",
    "zarr>=3.0",
]

[project.optional-dependencies]
spectral = ["scipy", "scikit-learn"]
all = ["arrowspace-mcp[spectral]"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["arrowspace_mcp*"]

[tool.setuptools.package-data]
arrowspace_mcp = ["skills/*.md"]

[dependency-groups]
dev = [
    "anyio>=4.14.1",
    "mcp>=1.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[project.scripts]
arrowspace-mcp = "arrowspace_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/Genefold/arrowspace-mcp"
Source = "https://github.com/Genefold/arrowspace-mcp"
